fixes top nav overlapping side nav

--- a/app/components/Nav/index.css
+++ b/app/components/Nav/index.css
@@ -92,7 +92,7 @@
     & ul {
       list-style: none;
       margin: 0;
-      padding: 20px 35px;
+      padding: var(--nav-height) 35px;
       & li {
         font-family: "Palanquin", sans-serif;
         font-size: 16px;
